<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CallerQ</string>
    <string name="welcome_to">Welcome to</string>
    <string name="main_name">Home</string>
    <string name="reschedule_name">Reschedule a call</string>
    <string name="about_name">About CallerQ</string>
    <string name="intro_advice_notif_on">The app will automatically start sending notifications after calls.</string>
    <string name="intro_advice_notif_off">You have disabled notifications. The app will start working as soon as you enable them in the settings.</string>
    <string name="settings_name">Settings</string>
    <string name="server_client_id">1062679360456-bnusi1bhk76d930u6eelmut352u6dnk9.apps.googleusercontent.com</string>
    <string name="version_no">Version no. 1.0.43</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="double_press_close">Press the back button again to exit</string>
    <string name="action_settings">Settings</string>
    <string name="login_connection_failed">Connection failed</string>
    <string name="play_services_connection_error">Google Play Services connection failed</string>
    <string name="google_sign_in_error">Sign in with Google failed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_callerq">Welcome to CallerQ !</string>
    <string name="calendar_event_title_call">Call</string>
    <string name="calendar_event_title_meeting">Meeting with</string>
    <string name="title_activity_reminder">Call reminder</string>
    <string name="title_dialog_terms">CallerQ - Terms of service</string>
    <string name="button_accept">I Agree</string>
    <string name="button_decline">Decline</string>
    <string name="ignore_dialog_title">Ignore this number</string>
    <string name="ignore_dialog_positive">I\'m sure</string>
    <string name="ignore_dialog_negative">Never mind</string>
    <string name="no_reminders">No reminders to display</string>
    <string name="user_name_placeholder">John Doe</string>
    <string name="user_email_placeholder">johndoe@callerq.com</string>
    <string name="reminder_title">Title</string>
    <string name="reminder_date_time">Date - Time</string>
    <string name="reminder_canceled">Reminder canceled</string>
    <string name="reminder_saved">Reminder saved</string>
    <string name="never_ask_for_this_contact">Never ask for this contact</string>
    <string name="view_reminders">View reminders</string>
    <string name="reminder_as_meeting">Set this reminder as a meeting</string>
    <string name="name_input_hint">Name</string>
    <string name="company_input_hint">Company</string>
    <string name="notes_input_hint">Notes</string>
    <string name="date_input_hint">Date</string>
    <string name="time_input_hint">Time</string>
    <string name="saved_title">Title</string>
    <string name="saved_date_and_time">Date and time</string>
    <string name="settings_title">Title</string>
    <string name="morning_time_title">Morning time</string>
    <string name="afternoon_time_title">Afternoon time</string>
    <string name="evening_time_title">Evening time</string>
    <string name="notifications_alerts_title">Notification alerts</string>
    <string name="alert_sound_title">Alert sound</string>
    <string name="alert_vibrate_title">Vibrate</string>
    <string name="send_usage_data_summary">Let us collect and use software data to improve your experience</string>
    <string name="send_usage_data_title">Send usage data</string>
    <string name="snooze_duration_summary">Set the snooze duration for reminder notifications</string>
    <string name="snooze_duration_title">Snooze duration</string>
    <string name="application_status_summary_true">You\'ll receive notifications for setting up call reminders</string>
    <string name="application_status_title">Send me reminder notifications</string>
    <string name="snooze_duration_dialog_title">Snooze duration in minutes</string>
    <string name="initial_time_amount_dialog_title">Initial time amount in minutes</string>
    <string name="initial_time_amount_title">Initial time amount</string>
    <string name="initial_time_amount_summary">Specify the default amount of time initially added to a new reminder</string>
</resources>