<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Application settings"
        android:key="pref_application_settings">

        <SwitchPreference
            android:key="pref_application_status"
            android:summary="@string/application_status_summary_true"
            android:title="@string/application_status_title"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Reminder settings"
        android:key="pref_reminder_settings">

        <com.callerq.helpers.preferences.NumberPickerPreference
            android:defaultValue="60"
            android:dialogTitle="@string/initial_time_amount_dialog_title"
            android:key="pref_initial_time_amount"
            android:summary="@string/initial_time_amount_summary"
            android:title="@string/initial_time_amount_title"/>

        <com.callerq.helpers.preferences.NumberPickerPreference
            android:defaultValue="5"
            android:dialogTitle="@string/snooze_duration_dialog_title"
            android:key="pref_snooze_duration"
            android:summary="@string/snooze_duration_summary"
            android:title="@string/snooze_duration_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Time values"
        android:key="pref_reminder_settings">

        <com.callerq.helpers.preferences.TimePickerPreference
            android:defaultValue="8"
            android:dialogTitle=""
            android:key="pref_morning_time"
            android:title="@string/morning_time_title"/>

        <com.callerq.helpers.preferences.TimePickerPreference
            android:defaultValue="14"
            android:dialogTitle=""
            android:key="pref_afternoon_time"
            android:title="@string/afternoon_time_title"/>

        <com.callerq.helpers.preferences.TimePickerPreference
            android:defaultValue="20"
            android:dialogTitle=""
            android:key="pref_evening_time"
            android:title="@string/evening_time_title"/>

    </PreferenceCategory>

</PreferenceScreen>